# food-healing-demo

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  constants.py  database.py  exceptions.py  main.py  middleware.py
backend/app/ai/: __init__.py  router.py
backend/app/db/: __init__.py  rabbitmq_producer.py
backend/app/models/: pg_orm.py  schemas.py
backend/app/routes/: __init__.py  admin.py  ai_chat.py  auth.py  camera.py  chat.py  food.py  health.py  leaderboard.py  menu.py  message.py  mood.py  preferences.py  recognize.py  recommend.py  share_card.py  sport.py  user.py  voice_to_tray.py  weekly_report.py
backend/app/schemas/: __init__.py  ai_chat.py  camera.py  food.py  message.py  user.py
backend/app/scripts/: check_data.py  init_db.py  seed_pg.sql
backend/app/services/: ai_service.py  auth_service.py  camera_service.py  chat_service.py  food_service.py  message_service.py  recognize_service.py  user_service.py
backend/app/tasks/: __init__.py  ai_task.py  message_task.py  run_consumer.py  run_scheduler.py
backend/app/utils/: __init__.py  auth.py  bailian_client.py  file_upload.py  logger.py
backend/tests/: conftest.py  test_health.py
docs/: BACKEND_DESIGN.md  FRONTEND_DESIGN.md  前端UI设计文档.md  前端技术规范.md  后端技术规范.md  接口契约统一.md  项目分工实施指南.md  验收规范.md
frontend-v2/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.js
frontend-v2/src/: App.jsx  index.css
frontend-v2/src/components/: AiDrawer.jsx  AiFloatingButton.jsx  AuthView.jsx  BottomTab.jsx  DiaryHeader.jsx  FoodSlidePanel.jsx  FoodTag.jsx  GlassCard.jsx  MealCard.jsx  NotificationsView.jsx  NutritionOverview.jsx  PhotoRecognition.jsx  ProfileView.jsx
frontend-v2/src/data/: foods.js
frontend-v2/src/hooks/: useChat.js  usePhotoRecognition.js
frontend-v2/src/lib/: api.js  nutrition.js
frontend-v2/src/stores/: authStore.js  (+4 more)
