[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "food-healing-backend"
version = "2.1.0"
description = "食愈校园后端 - 会成长、会记忆、会陪伴的校园饮食伙伴"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    # ORM + PG
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    # MongoDB
    "motor>=3.6.0",
    # Redis
    "redis>=8.0.1",
    # MQ
    "aio-pika>=9.6.2",
    # AI 平台
    "openai>=2.44.0",
    "dashscope>=1.26.2",
    # 鉴权
    "pyjwt>=2.13.0",
    "bcrypt>=5.0.0",
    # 配置 + 数据模型
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    # 日志
    "structlog>=26.1.0",
    # 对象存储
    "oss2>=2.19.1",
    # 图片处理
    "pillow>=12.3.0",
    # 服务发现（可选）
    "nacos-sdk-python>=3.2.0",
    # 定时任务（Phase 8 新增）
    "apscheduler>=3.10.4",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0.0",
]

# ===== 快捷启动命令（uv run <name>，Phase 8）=====
# 用 [project.scripts] 注册控制台 entry points，uv sync 后可直接 `uv run dev` 等
[project.scripts]
fh-dev = "app.cli:dev"
fh-prod = "app.cli:prod"
fh-consumer = "app.cli:consumer"
fh-scheduler = "app.cli:scheduler"
fh-init-db = "app.cli:init_db"
fh-check-db = "app.cli:check_db"

# 让 uv 把本项目当作可安装包（application packaged），
# 这样 [project.scripts] 的 entry points 才会被真正安装，
# `uv run fh-dev` 之类的快捷命令才能直接生效。
[tool.uv]
package = true

# 仅打包 app 目录，避免 flat-layout 误把 data/logs/uploads 也当作包
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=app --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py311"
